refactor: codestyle